# hub-analytics

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: release.yml
app/: Cargo.toml  proto.toml
app/src/: cube_client.rs  events.rs  handlers.rs  lib.rs  main.rs
app/src/entities/: collections.rs  credits.rs  customers.rs  drops.rs  mints.rs  mod.rs  organizations.rs  prelude.rs  projects.rs  transfers.rs  wallets.rs  webhooks.rs
app/src/graphql/: mod.rs  schema.rs
app/src/graphql/objects/: collection.rs  data_point.rs  datapoint.rs  mod.rs  organization.rs  project.rs
app/src/graphql/queries/: analytics.rs  collection.rs  mod.rs  project.rs  stats.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230804_212412_create_organizations_table.rs  m20230804_212530_create_projects_table.rs  m20230804_212603_create_customers_table.rs  m20230804_213809_create_collections_table.rs  m20230804_214701_create_mints_table.rs  m20230805_140311_create_wallets_table.rs  m20230818_030012_create_webhooks_table.rs  m20230818_031112_create_credits_table.rs  m20231804_024905_create_transfers_table.rs
